--- a/MasterGrid/8-SomeSimpleLayout/BuildingASidebar/style.css
+++ b/MasterGrid/8-SomeSimpleLayout/BuildingASidebar/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: 20;
   padding: 0;
 }
 
@@ -17,7 +17,10 @@ html {
 }
 
 main {
-  height: 100%;
+  display: grid;
+  grid-template-columns: 180px 1fr;
+  /* height: 100%; */
+  height: 400px
 }
 
 aside {
